fixed body overflow

--- a/css/headerfooter.css
+++ b/css/headerfooter.css
@@ -165,7 +165,7 @@ footer > div:first-child {
 
 @media only screen and (max-width: 800px) {
     body{
-        width: 100vw;
+        width: 100%;
     }
 
     .container {
