--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,14 @@
-/* .body {
-    overflow-x: hidden;
-} */
+
 
 .bgimage {
-    position: relative;
+    max-width: 1648px;
+    max-height: 824px;
 }
 
-.bgimage > img {
-    position: relative;
+.bigimg {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .smolimg {
@@ -166,16 +165,24 @@
 
 
 @media only screen and (max-width: 800px) {
+    .bgimage {
+        width: 100%;
+        max-height: 1066px;
+    }
+
     .bigimg {
         display: none;
     }
 
     .smolimg {
         display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .txtover {
-        bottom: 256px;
+        bottom: 5vh;
         left: calc(50% - 171.735px);
         align-items: center;
     }
